--- a/API-Web-Data-Viz/public/dashboard/mainPage.html
+++ b/API-Web-Data-Viz/public/dashboard/mainPage.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dashboard - Main page</title>
-	<script src="../js/sessao.js"></script>
+	<!-- <script src="../js/sessao.js"></script> -->
 	<link rel="stylesheet" href="../css/dashboard.css">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -54,7 +54,7 @@
 			</button>
 
 			<!-- Botão "Teste4" -->
-			<button class="botaoSidebar">
+			<button class="botaoSidebar" onclick="window.location.href='longoPrazo.html'">
 				<img src="../dashboard/img/mainPage.png">
 				<div class="h3">
 					<h3>Longo prazo</h3>
