--- a/API-Web-Data-Viz/public/dashboard/linha200.html
+++ b/API-Web-Data-Viz/public/dashboard/linha200.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dashboard - Linha 200</title>
-	<script src="../js/sessao.js"></script>
+	<!-- <script src="../js/sessao.js"></script> -->
 	<link rel="stylesheet" href="../css/dashboard.css">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
