--- a/API-Web-Data-Viz/public/calculadora.html
+++ b/API-Web-Data-Viz/public/calculadora.html
@@ -5,25 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador Financeiro</title>
-    <link rel="stylesheet" href="calculadora.css">
+    <link rel="stylesheet" href="../public/css/calculadora.css">
     <link rel="icon" type="image/x-icon" href="img/icon.svg">
 </head>
 
 <body>
-    <header>
-        <img src="logo.png" alt="">
-        <div class="itemsHeader">
-            <h4>INICIO</h4>
-            <h4>SOBRE NÓS</h4>
-            <h4>||</h4>
-            <button class="botao" onclick="opcaoHeader()"></button>
-            <div id="options" style="left: 94%;" class="options">
-              <a href="#">Perfil</a>
-              <a href="#">Configurações</a>
-              <a href="#">Sair</a>
+    
+        <header>
+            <a href="index.html"><img src="../public/css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
+            <div class="itemsHeader">
+              <h4><a href="index.html">Início</a></h4>
+              <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
+              <h4>||</h4>
+              <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
             </div>
-        </div>
-    </header><br><br><br><br>
+          </header>
+          <div class="underheader">
+            <div id="options" class="options" style="display: none;">
+              <a href="login.html">Login</a>
+              <a href="TelaDeCadastro.html">Cadastro</a>
+                        </div>
+          </div>
+        <br><br><br><br>
     <div class="mdFrota">
         <h1 style="color: white;"> Simulador financeiro TransControl</h1>
         <div>
@@ -62,14 +65,6 @@
 
 </html>
 <script>
-    function opcaoHeader() {
-  var options = document.getElementById("options");
-  if (options.style.display === "block") {
-    options.style.display = "none";
-  } else {
-    options.style.display = "block";
-  }
-}
 
     function calcular() {
 
@@ -377,4 +372,13 @@ ${arrecadado2.toFixed(2)}
         O prejuízo depois da mudança seria de aproximadamente <b class="txtresults">R$${prejutotDepois.toFixed(2)}</b><br> <br> <br>
         </b>`
     }}
+
+    function opcaoHeader() {
+    var options = document.getElementById("options");
+    if (options.style.display === "block") {
+      options.style.display = "none";
+    } else {
+      options.style.display = "block";
+    }
+  }
 </script>
