Atualizar Tela de Cadastro

--- a/API-Web-Data-Viz/public/pages/calculadora.html
+++ b/API-Web-Data-Viz/public/pages/calculadora.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador Financeiro</title>
-    <link rel="stylesheet" href="../public/css/calculadora.css">
+    <link rel="stylesheet" href="../css/calculadora.css">
     <link rel="icon" type="image/x-icon" href="img/icon.svg">
 </head>
 
 <body>
     
         <header>
-            <a href="index.html"><img src="../public/css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
+            <a href="index.html"><img src="../css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
             <div class="itemsHeader">
               <h4><a href="index.html">Início</a></h4>
               <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
