--- a/API-Web-Data-Viz/public/pages/TelaDeCadastro.html
+++ b/API-Web-Data-Viz/public/pages/TelaDeCadastro.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/sessao.js"></script>
-  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="../css/login.css">
   <link rel="shortcut icon" href="./css/img/LogoSEMescrita.png" type="image/x-icon">
   <title>TransControl | Cadastro Cliente</title>
 </head>
 
 <body onload="listar()">
   <header>
-    <a href="index.html"><img src="./css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
+    <a href="index.html"><img src="../css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
     <div class="itemsHeader">
       <h4><a href="index.html">Início</a></h4>
       <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
@@ -59,6 +59,10 @@
         </div>
     </div>
   </div>
+  <section id="nossos-servicos">
+  
+    </div>
+  </section>
 
   <footer>
     <div class="footer">
