--- a/API-Web-Data-Viz/public/pages/login.html
+++ b/API-Web-Data-Viz/public/pages/login.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TransControl | Login</title>
   <script src="./js/sessao.js"></script>
-  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="../css/login.css">
   <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
 </head>
 
 <body>
   <header>
-    <a href="index.html"><img src="./css/img/LogoSEMescrita.png" alt="Logo da Empresa" ></a>
+    <a href="index.html"><img src="../css/img/LogoSEMescrita.png" alt="Logo da Empresa" ></a>
     <div class="itemsHeader">
       <h4><a href="index.html">Início</a></h4>
       <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
